--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  # Service 1: The Database
+  # Service 1: The migrations
   db:
     image: postgres:15-alpine
     restart: always
@@ -11,11 +11,11 @@ services:
       # Persist data so it survives restarts
       - postgres_data:/var/lib/postgresql/data
       # Automatically run our schema script on first startup
-      - ./Database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./migrations/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432" # Allows you to connect from your local PC to check data
 
-  # Service 2: Your Crawler
+  # Service 2: Your crawler
   crawler:
     build: .
     depends_on:
